<resources>
    <string name="app_name">Clever Kitchen</string>
    <string name="intialScreenText">Make your kitchen smarter</string>
    <string name="signIn"> Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="helloText">Hello</string>
    <string name="welcomeText">Welcome !!</string>
    <string name="createAccountText">Create an account</string>
    <string name="accountExists">Already have an account? </string>
    <string name="noAccountExists">Don\'t have an Account?</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPassword">Enter password</string>
    <string name="enterName">Enter name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="nameText">Name</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="home_fragment_text">In Home Fragment</string>
    <string name="ViewRecipesText">View recipes </string>
    <string name="AddRecipesText">Add recipes</string>
    <string name="ShoppingListText">Shopping list</string>
    <string name="HomeText">\"A recipe has no soul.\n You, as a cook, must \n bring the soul to the recipe\"\n - \n Thomas Keller"</string>
    <string name="recipe_name_text">Recipe Name:</string>
    <string name="recipe_name_hint">Enter Recipe Name</string>
    <string name="ingredients_text">Ingredients:</string>
    <string name="recipe_ingredients_hint">Enter recipe ingredients</string>
    <string name="description_text">Description:</string>
    <string name="recipe_description_hint">Enter recipe description</string>
    <string name="video_text">Video:</string>
    <string name="video_hint">Upload a video</string>
    <string name="submit_button_text">Submit</string>
    <string name="mar_25_2022">Mar 25, 2022</string>
    <string name="micheal">Micheal</string>
    <string name="indian_creamy_butter_chicken_curry_recipie">Indian Creamy butter chicken curry recipie</string>
    <string name="hashtag1_hashtag2">#hashtag1 #hashtag2</string>
    <string name="view_recipies">View Recipies</string>
    <string name="text_label_1">Home</string>
    <string name="text_label_2">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
