<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_pic"
                android:layout_width="65dp"
                android:layout_height="65dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_account_circle_24" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/ic_online" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/iv_option"
                android:layout_toEndOf="@+id/rl_pic"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/micheal"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/mar_25_2022"
                    android:textSize="12sp" />

            </LinearLayout>



        </RelativeLayout>

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/indian_creamy_butter_chicken_curry_recipie"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/hashtag1_hashtag2"
            android:textColor="@color/purple_500"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_dish"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/ll_text"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_dish" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/iv_dish"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="18dp"
        android:background="@color/black" />

</RelativeLayout>